--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "framer-motion": "^7.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "react-router-dom": "v5"
   },
   "scripts": {
     "start": "react-scripts start",
